# vulkanc

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  run
src/: main.c
src/engine/: callbacks.h  engine.h  setup.h  state.h  types.h  utils.h  vulkan.h  window.h
src/engine/core/: engine.c  setup.c
src/engine/vulkan/: vulkan.c
src/engine/window/: window.c
